style.css
/* COLOR */
:root {
  --bg: #fffaf6;
  --bg-light: #ffffff;
  --dark-green: #1a3d2d;
  --light-green: #4f8168;
  --dark-font: #041d1d;
  --coffee: #8d5b4c;
  --water: #5fa8d3;
}

/* reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--dark-font);
  font-family: 'Nunito', sans-serif;
  /* font-family: 'Montserrat', sans-serif; */
}

a {
  color: inherit;
}

button {
  border: none;
}

input {
  border: none;
  /* background-color: lemonchiffon; */
}

/* COMMON */
.btn {
  padding: 0.7em;
  border-radius: 20px;
  cursor: pointer;
  background-color: var(--light-green);
  color: var(--bg);
  margin: 5px 0px 5px 5px;
  font-size: 1em;
  font-weight: 700;
  transition: 300ms;
}

.btn:hover {
  background-color: var(--dark-green);
  transform: scale(1.2);
}

/*  */
body {
  padding: 30px;
  background-color: var(--bg);
  min-width: 600px;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1200px;
  margin: auto;
}

.header__title {
  font-size: 30px;
  margin: 0px 30px 30px 30px;
}

.header__title h1 {
  font-weight: 900;
}

.header__btns {
  align-self: flex-end;
  margin-right: 20;
}

/* POST */
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: 500ms;
}

.post {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 800px;
  padding: 20px;
  background-color: rgba(256, 256, 256, 0.9);
  border-radius: 20px;
  margin-top: 20px;
  opacity: 1;
}
.fall {
  animation: 1s linear falldown;
}
@keyframes falldown {
  100% {
    transform: scale(0.5) translateY(600px);
    opacity: 0;
  }
}
.post__contant {
  width: 100%;
}

.post__contant fieldset {
  border: none;
  display: flex;
  flex-direction: column;
}

.post__title {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 10px;
}

#post__date {
  width: 11em;
  margin-right: 7px;
  text-align: end;
  font-size: 1.6em;
  cursor: pointer;
  border: none;
  font-weight: 800;
}

#post__day {
  font-weight: 800;
  font-size: 1.5em;
  width: 2.5em;
  text-align: center;
  vertical-align: bottom;
  border: none;
  background-color: none;
}

.items {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.item {
  /* margin: 10px 5px 7px 5px; */
  margin: 20px 15px 10px 10px;
}

.item__title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 10px;
  height: 37px;
}

.item__title label {
  font-size: 1.5em;
  font-weight: 700;
}

.item__emoji {
  margin-left: 10px;
}

.item__emoji [type='checkbox'] {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.item__emoji img {
  width: 30px;
  margin-right: 3px;
  filter: grayscale(100%);
  cursor: pointer;
}

.item__emoji [type='checkbox']:checked + img {
  filter: grayscale(0%);
}

.water [type='checkbox'],
.coffee [type='checkbox'] {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.water [type='checkbox']:checked + i {
  color: var(--water);
  animation: 1s linear 0s shake;
  transition: 500ms;
}

@keyframes shake {
  0% {
    transform: rotate(0deg);
  }

  20% {
    transform: rotate(30deg);
  }

  40% {
    transform: rotate(-30deg);
  }

  60% {
    transform: rotate(20deg);
  }

  80% {
    transform: rotate(-20deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

.coffee [type='checkbox']:checked + i {
  color: var(--coffee);
  animation: 1s linear 0s moveup;
  transition: 500ms;
}

@keyframes moveup {
  0% {
  }

  20% {
    transform: skew(15deg, 15deg);
  }

  40% {
    transform: skew(-15deg, -15deg);
  }

  60% {
    transform: skew(10deg, 10deg);
  }

  80% {
    transform: skew(-10deg, -10deg);
  }

  100% {
  }
}

.item__input input {
  width: 100%;
  padding: 7px;
  font-size: 1.3em;
  background: var(--light-green);
  color: #fff;
  border: none;
  border-radius: 5px;
}

.post__btns {
  align-self: flex-end;
  margin-top: 10px;
}

.item__icons {
  display: flex;
  justify-content: space-around;
}

.item__icons i {
  font-size: 28px;
  color: #ced4da;
  cursor: pointer;
}

/* Posts */
.posts {
  display: flex;
  max-width: 1700px;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 40px;
  background-color: wheat;
  border-radius: 20px;
  padding-top: 40px;
}

.posted-post {
  width: 100%;
  max-width: 450px;
  background-color: var(--bg-light);
  border-radius: 20px;
  padding: 20px;
  margin: 0 40px 40px 40px;
  position: relative;
}

.posted__delete {
  visibility: hidden;
  position: absolute;
  top: 10px;
  right: 17.5px;
  font-size: 20px;
  padding: 10px;
  background: none;
  cursor: pointer;
}

.posted__delete i {
  color: rgb(188, 188, 188);
}

.posted-post:hover .posted__delete {
  visibility: visible;
}

.posted__title {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1.5em;
  font-weight: 600;
}

.posted__date {
  margin-right: 7px;
}

.pitems {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.pitem {
  margin: 10px 5px 7px 5px;
}

.pitem__title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 25px;
  margin-bottom: 3px;
}

.pitem__title h4 {
  font-size: 1.1em;
}

.pitem__emoji img.checked__emoji {
  filter: grayscale(0%);
}

.pitem__emoji img {
  width: 20px;
  margin-right: 2px;
  filter: grayscale(100%);
  cursor: auto;
}

.pitem__inner {
  display: block;
  width: 100%;
  padding: 7px;
  font-size: 0.9em;
  background: var(--light-green);
  color: #fff;
  border-radius: 5px;
  height: 32px;
}

.pitem__icons {
  display: flex;
  justify-content: space-around;
}

.pitem__icons i {
  font-size: 20px;
  color: #ced4da;
  cursor: auto;
}

.water .icon-checked {
  color: var(--water);
}

.coffee .icon-checked {
  color: var(--coffee);
}

.posted-post:nth-child(2) {
  color: red;
}

@media (max-width: 650px) {
  body .btn {
    padding: 0.5em;
    font-size: 1.2em;
  }
  .header__btns #reset-posts {
    margin-bottom: 30px;
  }
  header .header__title h1 {
    font-size: 1.6em;
  }
  .post .item__title label {
    font-size: 1.2em;
    font-weight: 700;
  }
  .post .item__emoji img {
    width: 20px;
    margin-right: 2px;
  }
  .posted-post .posted__title {
    font-size: 1.2em;
    min-height: 2em;
  }
  .posted-post .pitem__title h4 {
    font-size: 0.9em;
  }
  .posted-post .posted__delete {
    visibility: visible;
    top: 15px;
  }
}

